plugins {
    id "idea"
    id "java"
    id "application"
    id "io.freefair.lombok" version "8.11"
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

ext {
    jUnitVersion = "5.11.4"
    mockitoVersion = "5.15.2"
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation "org.junit.jupiter:junit-jupiter-api:${jUnitVersion}"
    testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"

    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${jUnitVersion}"
}

test {
    useJUnitPlatform()
}

run {
    mainClass = "org.acme.game.GameApp"
    standardInput = System.in
}